upload new elements

--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         font-family: b yekan;
         background-color: #3a0185d4;
       }
+      img {
+        width: 50px;
+      }
       .Gallery {
         display: flex;
         gap: 4px;
@@ -47,35 +50,39 @@
   <body>
     
     <div class="Gallery">
-        <div class="Card">
-          <ul>
-            <li>
-              <a href="index.html">صفحه اصلی</a>
-            </li>
-          </ul>
-        </div>
-        <div class="Card">
-          <ul>
-            <li>
-              <a href="network.html">تاریخچه اینترنت</a>
-            </li>
-          </ul>
-        </div>
-        <div class="Card">
-          <ul>
-            <li>
-              <a href="elements.html">المنت ها html</a>
-            </li>
-          </ul>
-        </div>
-        <div class="Card">
-          <ul>
-            <li>
-              <a href="about.html">درباره ما</a>
-            </li>
-          </ul>
-        </div>
+      <div class="Card">
+        <ul>
+          <li>
+            <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
+          </li>
+        </ul>
       </div>
+      <div class="Card">
+        <ul>
+          <li>
+            <a class="s1" href="network.html"
+              ><img src="history.png" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <div class="Card">
+        <ul>
+          <li>
+            <a class="s1" href="elements.html"
+              ><img src="element.png" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <div class="Card">
+        <ul>
+          <li>
+            <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <ul>
       <dl>
         <dt>
