--- a/elements.html
+++ b/elements.html
@@ -5,11 +5,30 @@
     <title>elements</title>
     <style>
       .textcolor {
-        color: #b881ff;
+    title1#49247a;
+        border: 2px #d581d7 solid;
+        border-radius: 20px;
+        background-color: rgb(229, 196, 234);
+        width: 500px;
+      }
+      mark{
+        border: 2px solid rgb(245, 156, 156);
+        border-radius: 10px;
+        background-color: #6cffff;
+
+      }
+      .title1{
+        color: #fbeceb;
       }
       body {
         font-family: b yekan;
         background-color: #3a0185d4;
+      }
+      .s1 {
+        text-decoration: none;
+      }
+      img {
+        width: 50px;
       }
       .Gallery {
         display: flex;
@@ -50,33 +69,37 @@
       <div class="Card">
         <ul>
           <li>
-            <a href="index.html">صفحه اصلی</a>
+            <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="network.html">تاریخچه اینترنت</a>
+            <a class="s1" href="network.html"
+              ><img src="history.png" alt=""
+            /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="elements.html">المنت ها html</a>
+            <a class="s1" href="elements.html"
+              ><img src="element.png" alt=""
+            /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="about.html">درباره ما</a>
+            <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
           </li>
         </ul>
       </div>
     </div>
-    <div class="textcolor">
+    <div class="title1">
       <h1 style="font-size: 20px">تگ های تیتر یا Heading در HTML</h1>
     </div>
     <p class="textcolor">
@@ -92,25 +115,127 @@
     <hr />
     <hr />
     <br />
-    <div class="textcolor" style="font-size: 20px; font-weight: bold">
+    <div class="title1" style="font-size: 20px; font-weight: bold">
       تگ P در HTML
     </div>
     <p class="textcolor">
       تگ p که از کلمه Paragraph گرفته شده، همونطور که از اسمش مشخصه ، تگی است که
       با استفاده از آن میتوان در یک صفحه وب یک یا چندین پاراگراف را ایجاد کرد.
     </p>
-    <div class="textcolor" style="font-size: 20px; font-weight: bold">
+    <div class="title1" style="font-size: 20px; font-weight: bold">
       تگ ul چیست؟
     </div>
     <p class="textcolor">
       کلمه ul مخفف UnOrdered List می باشد که به معنی لیست نامرتب می باشد.
     </p>
-    <div class="textcolor" style="font-size: 20px; font-weight: bold">
+    <div class="title1" style="font-size: 20px; font-weight: bold">
       تگ ol چیست؟
     </div>
-    <p class="textcolor">
-      متن هایی که در تگ ol قرار می گیرند، دارای شماره گذاری هستند، یعنی ترتیب
-      آیتم ها در آن اهمیت دارد.
-    </p>
+    <div>
+      <p class="textcolor">
+        متن هایی که در تگ ol قرار می گیرند، دارای شماره گذاری هستند، یعنی ترتیب
+        آیتم ها در آن اهمیت دارد.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ های فرمت دهی در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        در طراحی صفحات وب، وظیفه گروهی از تگ های HTML فرمت دهی و تعیین شکل نمایش
+        متون ( مثلا ضخیم و bold بودن و یا مورب و …) میباشد در این مقاله آموزشی،
+        با این گروه از تگها (formatting tags) آشنا خواهید شد:
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      کامنت گذاشتن در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        کامنت ها به نوشته هایی گفته میشود که معمولا برای توضیح ، در قسمتی از
+        سورس کد های HTML قرار میگیرد و به برنامه نویس کمک میکنند. کامنت ها در
+        خروجی مرورگر نمایش داده نمیشوند بنابراین کامنت ها در صفحه وب قابل مشاهده
+        نیستند.با استفاده از تگ !– … – در HTML می توان کامنت های مورد نظرتان را
+        به سند HTML اضافه کنید.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Link در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ link یکی از تگ های پراستفاده در قسمت هد ( Head ) یک صفحه وب می باشد،
+        تگی است که با استفاده از آن میتوان فایل های CSS خارجی رو وارد صفحه کرد.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      آموزش تگ img در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ img همونطور که از اسمش مشخصه از کلمه ( Image ) گرفته شده است، تگی است
+        که با استفاده از آن میتوان تصویر / عکس را در یک صفحه وب قرار داد.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Picture در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ picture تگی است همانند یک کانتینر ( Container ) یا یک ظرف برای
+        نگهداری ۱ یا چندین عکس ، که با استفاده از آن میتوان یک یا چندین عکس رو
+        در اندازه های مختلف صفحه نمایش به نمایش گذاشت.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Table در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ table همونطور که از اسمشم مشخصه تگی است که با استفاده از آن میتوان یک
+        جدول را در یک صفحه وب ایجاد کرد، حال یکسری تگ ها هستن که همگی درون تگ
+        table مورد استفاده قرار میگیرند که این تگ ها عبارتند از :
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Video در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ video که دیگه از اسمش مشخصه چیه! تگی است که با استفاده از آن میتوان
+        یک ویدئو ( کلیپ ، فیلم ) را در یک صفحه وب قرار داد.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Iframe در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ iframe تگی است با استفاده از اون میتونیم به راحتی یک سایت یا یک فایل
+        یا یک تصویر و یا بطور کلی میتوان یک صفحه وب را درون یک صفحه ی وب دیگر
+        قرار داد.
+      </p>
+    </div>
+    <div class="title1" style="font-size: 20px; font-weight: bold">
+      تگ Form در HTML
+    </div>
+    <div>
+      <p class="textcolor">
+        تگ form همونطور که از اسمشم مشخصه با استفاده از اون میتونیم یک یا چندین
+        فرم رو در یک صفحه ی وب ایجاد کنیم. یسری تگ ها هستن که فقط مخصوص استفاده
+        در تگ Form هستن، این تگ ها شامل موارد زیر می باشد :
+
+        <br />input 
+        <br /> textarea 
+        <br />select 
+        <br />fieldset 
+        <br />label 
+        <br />button 
+        <br />option 
+        <br />optgroup 
+        <br />output 
+        <br />datalist
+      </p>
+    </div>
   </body>
 </html>
