--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                   font-family: b yekan;
                   background-color: #3a0185d4;
                 }
+                img {
+                 width: 50px;
+                }
                 .Gallery {
                   display: flex;
                   gap: 4px;
@@ -46,43 +49,47 @@
         </head>
         <body>
 
-            <div class="Gallery">
-                <div class="Card">
-                  <ul>
-                    <li>
-                      <a href="index.html">صفحه اصلی</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="Card">
-                  <ul>
-                    <li>
-                      <a href="network.html">تاریخچه اینترنت</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="Card">
-                  <ul>
-                    <li>
-                      <a href="elements.html">المنت ها html</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="Card">
-                  <ul>
-                    <li>
-                      <a href="about.html">درباره ما</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+          <div class="Gallery">
+            <div class="Card">
+              <ul>
+                <li>
+                  <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="Card">
+              <ul>
+                <li>
+                  <a class="s1" href="network.html"
+                    ><img src="history.png" alt=""
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="Card">
+              <ul>
+                <li>
+                  <a class="s1" href="elements.html"
+                    ><img src="element.png" alt=""
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="Card">
+              <ul>
+                <li>
+                  <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
             <dl>
                 <dt><h1>Hypertext Markup Language</h1> <strong>(HTML)</strong></dt>
                 <dd>is the standard markup language for documents designed to be displayed in a web browser. 
                     <br> It defines the content and structure of web content.
                     <br> It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as <strong>JavaScript</strong>.
                     <hr>
-                    <pre>Web browsers receive HTML documents from a web server or from local storage and 
+                    <p>Web browsers receive HTML documents from a web server or from local storage and 
                         <br>render the documents into multimedia web pages. HTML describes the structure of a 
                         <br>web page semantically and originally included cues for its appearance.
 
@@ -102,7 +109,7 @@
                          <br>[2] A form of HTML, known as HTML5, is used to display video and audio, 
                          <br>primarily using the <canvas> element, together with JavaScript.
                         
-                        </pre>
+                         </p>
                 </dd>
             </dl>
         </body>
