--- a/network.html
+++ b/network.html
@@ -10,6 +10,9 @@
         font-family: b yekan;
         background-color: #3a0185d4;
       }
+      img {
+        width: 50px;
+      }
       .Gallery {
         display: flex;
         gap: 4px;
@@ -49,28 +52,32 @@
       <div class="Card">
         <ul>
           <li>
-            <a href="index.html">صفحه اصلی</a>
+            <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="network.html">تاریخچه اینترنت</a>
+            <a class="s1" href="network.html"
+              ><img src="history.png" alt=""
+            /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="elements.html">المنت ها html</a>
+            <a class="s1" href="elements.html"
+              ><img src="element.png" alt=""
+            /></a>
           </li>
         </ul>
       </div>
       <div class="Card">
         <ul>
           <li>
-            <a href="about.html">درباره ما</a>
+            <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
           </li>
         </ul>
       </div>
