--- a/network.html
+++ b/network.html
@@ -7,11 +7,12 @@
         color: #b881ff;
       }
       body {
-        font-family: b yekan;
-        background-color: #3a0185d4;
+        font-family: impact;
+        background-color: #210312ec;
+        color: #ffc107;
       }
       img {
-        width: 50px;
+        width: 30px;
       }
       .Gallery {
         display: flex;
@@ -23,7 +24,7 @@
         width: 80px;
         border-radius: 4px;
         padding: 8px;
-        height: 160px;
+        height: 50px;
         background-color: white;
         transition: 0.4s ease-in-out;
         flex: 1px;
@@ -49,38 +50,33 @@
   </head>
   <body>
     <div class="Gallery">
-      <div class="Card">
+      <a class="s1 Card" href="index.html">
         <ul>
           <li>
-            <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
+            <img src="home.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
+      </a>
+
+      <a class="s1 Card" href="network.html">
         <ul>
           <li>
-            <a class="s1" href="network.html"
-              ><img src="history.png" alt=""
-            /></a>
+            <img src="history.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
+      </a>
+      <a class="s1 Card" href="elements.html">
+        <ul>
+          <li><img src="element.png" alt="" /></li>
+        </ul>
+      </a>
+      <a class="s1 Card" href="about.html">
         <ul>
           <li>
-            <a class="s1" href="elements.html"
-              ><img src="element.png" alt=""
-            /></a>
+            <img src="about.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
-        <ul>
-          <li>
-            <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
-          </li>
-        </ul>
-      </div>
+      </a>
     </div>
     <ul>
       <dl>
