--- a/elements.html
+++ b/elements.html
@@ -6,28 +6,28 @@
     <style>
       .textcolor {
         border: 2px #d581d7 solid;
-        border-radius: 20px;
-        background-color: rgb(229, 196, 234);
-        width: 500px;
+        border-radius: 4px;
+        background-color: rgb(151, 118, 211);
+        height: 200px;
       }
-      mark{
+      mark {
         border: 2px solid rgb(245, 156, 156);
         border-radius: 10px;
         background-color: #6cffff;
-
       }
-      .title1{
-        color: #fbeceb;
+      .title1 {
+        color: #ec9e55;
       }
       body {
         font-family: b yekan;
-        background-color: #3a0185d4;
+        background-color: #210312ec;
+        color: #240116;
       }
       .s1 {
         text-decoration: none;
       }
       img {
-        width: 50px;
+        width: 30px;
       }
       .Gallery {
         display: flex;
@@ -39,7 +39,7 @@
         width: 80px;
         border-radius: 4px;
         padding: 8px;
-        height: 160px;
+        height: 50px;
         background-color: white;
         transition: 0.4s ease-in-out;
         flex: 1px;
@@ -65,38 +65,33 @@
   </head>
   <body>
     <div class="Gallery">
-      <div class="Card">
+      <a class="s1 Card" href="index.html">
         <ul>
           <li>
-            <a class="s1" href="index.html"><img src="home.png" alt="" /></a>
+            <img src="home.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
+      </a>
+
+      <a class="s1 Card" href="network.html">
         <ul>
           <li>
-            <a class="s1" href="network.html"
-              ><img src="history.png" alt=""
-            /></a>
+            <img src="history.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
+      </a>
+      <a class="s1 Card" href="elements.html">
+        <ul>
+          <li><img src="element.png" alt="" /></li>
+        </ul>
+      </a>
+      <a class="s1 Card" href="about.html">
         <ul>
           <li>
-            <a class="s1" href="elements.html"
-              ><img src="element.png" alt=""
-            /></a>
+            <img src="about.png" alt="" />
           </li>
         </ul>
-      </div>
-      <div class="Card">
-        <ul>
-          <li>
-            <a class="s1" href="about.html"><img src="about.png" alt="" /></a>
-          </li>
-        </ul>
-      </div>
+      </a>
     </div>
     <div class="title1">
       <h1 style="font-size: 20px">تگ های تیتر یا Heading در HTML</h1>
@@ -224,16 +219,8 @@
         فرم رو در یک صفحه ی وب ایجاد کنیم. یسری تگ ها هستن که فقط مخصوص استفاده
         در تگ Form هستن، این تگ ها شامل موارد زیر می باشد :
 
-        <br />input 
-        <br /> textarea 
-        <br />select 
-        <br />fieldset 
-        <br />label 
-        <br />button 
-        <br />option 
-        <br />optgroup 
-        <br />output 
-        <br />datalist
+        <br />input <br />textarea <br />select <br />fieldset <br />label
+        <br />button <br />option <br />optgroup <br />output <br />datalist
       </p>
     </div>
   </body>
