--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       }
       body {
         font-family: impact;
-        background-color: #210312ec;
+        background-image: url(/photos/evening\ 2.jpg);
+        color: #240116;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         color: #e8991bec;
       }
       img {
