--- a/network.html
+++ b/network.html
@@ -8,8 +8,10 @@
       }
       body {
         font-family: impact;
-        background-color: #210312ec;
+        background-color: #28183d;
         color: #ffc107;
+        background-size: 700px;
+
       }
       img {
         width: 30px;
